# SensorIntegrate

./: .gitignore  README.md
SICmake/: CMakeLists.txt  SI.c  SI.h  main.c
adcTestingCMake/: CMakeLists.txt  adcBaseline.c  adcBufDebug.c  adcWithClock.c  dustSensor.c  main.c
